--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://arsanyehab88.github.io/e-commerce", 
+  "homepage": "https://omarkhater9.github.io/e-commerce-app", 
   "name": "e-commerce",
   "version": "0.1.0",
   "private": true,
